# StreamWeave

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: package.yml
prd/: 01-产品需求文档.md  02-交互与界面需求.md  03-技术方案.md  04-Chrome插件产品需求文档.md
prd/plan/: 01-MVP开发计划.md  02-任务拆解.md  03-测试验收计划.md
scripts/: extract-m3u8.mjs  sync-release-version.mjs
src/: main.js  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
