[package]
name = "streamweave"
version = "0.1.0"
description = "A local HLS video downloader"
authors = ["uncle"]
edition = "2021"

[lib]
name = "streamweave_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "StreamWeave"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
url = "2"
chrono = "0.4"
aes = "0.8"
cbc = "0.1"
cipher = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
